// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component-conatiner SwitchCategory Первичный рендринг, компонент еще не инициализирован 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(SwitchCategory)>
    <SwitchCategory
      dispatch={[Function]}
      inited={false}
      isFetching={true}
      showProductGroups={true}
      tooltipOpen={false}
    >
      <div
        className={[Function]}
      />
    </SwitchCategory>
  </Connect(SwitchCategory)>
</Provider>
`;

exports[`component-conatiner SwitchCategory должен показать дропдаун выбора 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(SwitchCategory)>
    <SwitchCategory
      dispatch={[Function]}
      inited={true}
      isFetching={false}
      showProductGroups={false}
      tooltipOpen={false}
    >
      <div
        className={[Function]}
      >
        <div
          className={[Function]}
        >
          <div>
            <b
              className={[Function]}
            >
              Режим:
               
              Рубрики ПЦ
            </b>
          </div>
          <div>
            <Dropdown
              animation="slide-up"
              closeOnSelect={true}
              defaultVisible={false}
              hideAction={Array []}
              minOverlayWidthMatchTrigger={true}
              onVisibleChange={[Function]}
              overlay={
                <div
                  className="e-switch-cat-menu"
                  title={undefined}
                >
                  <div
                    className={[Function]}
                  >
                    Выберите вид рубрикатора:
                  </div>
                  <SetItem
                    checked={true}
                    onSelect={[Function]}
                    title="Рубрики Пульса цен"
                  >
                    Вид каталога, состоящий из рубрик площадки Пульс цен, к которым привязаны ваши товары.
                  </SetItem>
                  <SetItem
                    checked={false}
                    onSelect={[Function]}
                    title="Ваши группы"
                  >
                    Вид каталога, в котором вы сами можете сгруппировать свои товары и услуги так, чтобы он более точно соответствовал ассортименту вашей компании.
                  </SetItem>
                </div>
              }
              overlayClassName=""
              overlayStyle={Object {}}
              placement="bottomLeft"
              prefixCls="rc-dropdown"
              showAction={Array []}
              trigger={
                Array [
                  "click",
                ]
              }
              visible={false}
            >
              <Trigger
                action={
                  Array [
                    "click",
                  ]
                }
                afterPopupVisibleChange={[Function]}
                blurDelay={0.15}
                builtinPlacements={
                  Object {
                    "bottomCenter": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tc",
                        "bc",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "bottomLeft": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tl",
                        "bl",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "bottomRight": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tr",
                        "br",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "topCenter": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bc",
                        "tc",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "topLeft": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bl",
                        "tl",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "topRight": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "br",
                        "tr",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                  }
                }
                closeOnSelect={true}
                defaultPopupVisible={false}
                defaultVisible={false}
                destroyPopupOnHide={false}
                focusDelay={0}
                getDocument={[Function]}
                getPopupClassNameFromAlign={[Function]}
                hideAction={Array []}
                mask={false}
                maskClosable={true}
                minOverlayWidthMatchTrigger={true}
                mouseEnterDelay={0}
                mouseLeaveDelay={0.1}
                onPopupAlign={[Function]}
                onPopupVisibleChange={[Function]}
                onVisibleChange={[Function]}
                overlay={
                  <div
                    className="e-switch-cat-menu"
                    title={undefined}
                  >
                    <div
                      className={[Function]}
                    >
                      Выберите вид рубрикатора:
                    </div>
                    <SetItem
                      checked={true}
                      onSelect={[Function]}
                      title="Рубрики Пульса цен"
                    >
                      Вид каталога, состоящий из рубрик площадки Пульс цен, к которым привязаны ваши товары.
                    </SetItem>
                    <SetItem
                      checked={false}
                      onSelect={[Function]}
                      title="Ваши группы"
                    >
                      Вид каталога, в котором вы сами можете сгруппировать свои товары и услуги так, чтобы он более точно соответствовал ассортименту вашей компании.
                    </SetItem>
                  </div>
                }
                popup={
                  <div
                    className="e-switch-cat-menu"
                    onClick={[Function]}
                    title={undefined}
                  >
                    <div
                      className={[Function]}
                    >
                      Выберите вид рубрикатора:
                    </div>
                    <SetItem
                      checked={true}
                      onSelect={[Function]}
                      title="Рубрики Пульса цен"
                    >
                      Вид каталога, состоящий из рубрик площадки Пульс цен, к которым привязаны ваши товары.
                    </SetItem>
                    <SetItem
                      checked={false}
                      onSelect={[Function]}
                      title="Ваши группы"
                    >
                      Вид каталога, в котором вы сами можете сгруппировать свои товары и услуги так, чтобы он более точно соответствовал ассортименту вашей компании.
                    </SetItem>
                  </div>
                }
                popupAlign={Object {}}
                popupAnimation="slide-up"
                popupClassName=""
                popupPlacement="bottomLeft"
                popupStyle={Object {}}
                popupVisible={false}
                prefixCls="rc-dropdown"
                showAction={Array []}
                visible={false}
              >
                <span
                  className={[Function]}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  Сменить
                </span>
              </Trigger>
            </Dropdown>
          </div>
        </div>
        <Dropdown
          animation="slide-up"
          closeOnSelect={false}
          defaultVisible={false}
          hideAction={Array []}
          minOverlayWidthMatchTrigger={true}
          onVisibleChange={[Function]}
          overlay={
            <div
              className="e-switch-tooltip"
            >
              Режим Рубрики Пульса цен - это вид каталога состоящий из рубрик площадки Пульс цен к которым привязаны ваши товары. Если вы хотите использовать свои группы, переключитесь в режим Ваши группы.
              <div
                className={[Function]}
                onClick={[Function]}
                title="Закрыть"
              />
            </div>
          }
          overlayClassName=""
          overlayStyle={Object {}}
          placement="bottomLeft"
          prefixCls="rc-dropdown"
          showAction={Array []}
          trigger={
            Array [
              "click",
            ]
          }
          visible={false}
        >
          <Trigger
            action={
              Array [
                "click",
              ]
            }
            afterPopupVisibleChange={[Function]}
            blurDelay={0.15}
            builtinPlacements={
              Object {
                "bottomCenter": Object {
                  "offset": Array [
                    0,
                    4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "tc",
                    "bc",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "bottomLeft": Object {
                  "offset": Array [
                    0,
                    4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "tl",
                    "bl",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "bottomRight": Object {
                  "offset": Array [
                    0,
                    4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "tr",
                    "br",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "topCenter": Object {
                  "offset": Array [
                    0,
                    -4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "bc",
                    "tc",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "topLeft": Object {
                  "offset": Array [
                    0,
                    -4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "bl",
                    "tl",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "topRight": Object {
                  "offset": Array [
                    0,
                    -4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "br",
                    "tr",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
              }
            }
            closeOnSelect={false}
            defaultPopupVisible={false}
            defaultVisible={false}
            destroyPopupOnHide={false}
            focusDelay={0}
            getDocument={[Function]}
            getPopupClassNameFromAlign={[Function]}
            hideAction={Array []}
            mask={false}
            maskClosable={true}
            minOverlayWidthMatchTrigger={true}
            mouseEnterDelay={0}
            mouseLeaveDelay={0.1}
            onPopupAlign={[Function]}
            onPopupVisibleChange={[Function]}
            onVisibleChange={[Function]}
            overlay={
              <div
                className="e-switch-tooltip"
              >
                Режим Рубрики Пульса цен - это вид каталога состоящий из рубрик площадки Пульс цен к которым привязаны ваши товары. Если вы хотите использовать свои группы, переключитесь в режим Ваши группы.
                <div
                  className={[Function]}
                  onClick={[Function]}
                  title="Закрыть"
                />
              </div>
            }
            popup={
              <div
                className="e-switch-tooltip"
                onClick={[Function]}
              >
                Режим Рубрики Пульса цен - это вид каталога состоящий из рубрик площадки Пульс цен к которым привязаны ваши товары. Если вы хотите использовать свои группы, переключитесь в режим Ваши группы.
                <div
                  className={[Function]}
                  onClick={[Function]}
                  title="Закрыть"
                />
              </div>
            }
            popupAlign={Object {}}
            popupAnimation="slide-up"
            popupClassName=""
            popupPlacement="bottomLeft"
            popupStyle={Object {}}
            popupVisible={false}
            prefixCls="rc-dropdown"
            showAction={Array []}
            visible={false}
          >
            <div
              className={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            />
          </Trigger>
        </Dropdown>
      </div>
    </SwitchCategory>
  </Connect(SwitchCategory)>
</Provider>
`;

exports[`component-conatiner SwitchCategory должен показать дропдаун выбора 2`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(SwitchCategory)>
    <SwitchCategory
      dispatch={[Function]}
      inited={true}
      isFetching={false}
      showProductGroups={false}
      tooltipOpen={false}
    >
      <div
        className={[Function]}
      >
        <div
          className={[Function]}
        >
          <div>
            <b
              className={[Function]}
            >
              Режим:
               
              Рубрики ПЦ
            </b>
          </div>
          <div>
            <Dropdown
              animation="slide-up"
              closeOnSelect={true}
              defaultVisible={false}
              hideAction={Array []}
              minOverlayWidthMatchTrigger={true}
              onVisibleChange={[Function]}
              overlay={
                <div
                  className="e-switch-cat-menu"
                  title={undefined}
                >
                  <div
                    className={[Function]}
                  >
                    Выберите вид рубрикатора:
                  </div>
                  <SetItem
                    checked={true}
                    onSelect={[Function]}
                    title="Рубрики Пульса цен"
                  >
                    Вид каталога, состоящий из рубрик площадки Пульс цен, к которым привязаны ваши товары.
                  </SetItem>
                  <SetItem
                    checked={false}
                    onSelect={[Function]}
                    title="Ваши группы"
                  >
                    Вид каталога, в котором вы сами можете сгруппировать свои товары и услуги так, чтобы он более точно соответствовал ассортименту вашей компании.
                  </SetItem>
                </div>
              }
              overlayClassName=""
              overlayStyle={Object {}}
              placement="bottomLeft"
              prefixCls="rc-dropdown"
              showAction={Array []}
              trigger={
                Array [
                  "click",
                ]
              }
              visible={true}
            >
              <Trigger
                action={
                  Array [
                    "click",
                  ]
                }
                afterPopupVisibleChange={[Function]}
                blurDelay={0.15}
                builtinPlacements={
                  Object {
                    "bottomCenter": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tc",
                        "bc",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "bottomLeft": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tl",
                        "bl",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "bottomRight": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tr",
                        "br",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "topCenter": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bc",
                        "tc",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "topLeft": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bl",
                        "tl",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "topRight": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "br",
                        "tr",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                  }
                }
                closeOnSelect={true}
                defaultPopupVisible={false}
                defaultVisible={false}
                destroyPopupOnHide={false}
                focusDelay={0}
                getDocument={[Function]}
                getPopupClassNameFromAlign={[Function]}
                hideAction={Array []}
                mask={false}
                maskClosable={true}
                minOverlayWidthMatchTrigger={true}
                mouseEnterDelay={0}
                mouseLeaveDelay={0.1}
                onPopupAlign={[Function]}
                onPopupVisibleChange={[Function]}
                onVisibleChange={[Function]}
                overlay={
                  <div
                    className="e-switch-cat-menu"
                    title={undefined}
                  >
                    <div
                      className={[Function]}
                    >
                      Выберите вид рубрикатора:
                    </div>
                    <SetItem
                      checked={true}
                      onSelect={[Function]}
                      title="Рубрики Пульса цен"
                    >
                      Вид каталога, состоящий из рубрик площадки Пульс цен, к которым привязаны ваши товары.
                    </SetItem>
                    <SetItem
                      checked={false}
                      onSelect={[Function]}
                      title="Ваши группы"
                    >
                      Вид каталога, в котором вы сами можете сгруппировать свои товары и услуги так, чтобы он более точно соответствовал ассортименту вашей компании.
                    </SetItem>
                  </div>
                }
                popup={
                  <div
                    className="e-switch-cat-menu"
                    onClick={[Function]}
                    title={undefined}
                  >
                    <div
                      className={[Function]}
                    >
                      Выберите вид рубрикатора:
                    </div>
                    <SetItem
                      checked={true}
                      onSelect={[Function]}
                      title="Рубрики Пульса цен"
                    >
                      Вид каталога, состоящий из рубрик площадки Пульс цен, к которым привязаны ваши товары.
                    </SetItem>
                    <SetItem
                      checked={false}
                      onSelect={[Function]}
                      title="Ваши группы"
                    >
                      Вид каталога, в котором вы сами можете сгруппировать свои товары и услуги так, чтобы он более точно соответствовал ассортименту вашей компании.
                    </SetItem>
                  </div>
                }
                popupAlign={Object {}}
                popupAnimation="slide-up"
                popupClassName=""
                popupPlacement="bottomLeft"
                popupStyle={Object {}}
                popupVisible={true}
                prefixCls="rc-dropdown"
                showAction={Array []}
                visible={true}
              >
                <span
                  className={[Function]}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  Сменить
                </span>
              </Trigger>
            </Dropdown>
          </div>
        </div>
        <Dropdown
          animation="slide-up"
          closeOnSelect={false}
          defaultVisible={false}
          hideAction={Array []}
          minOverlayWidthMatchTrigger={true}
          onVisibleChange={[Function]}
          overlay={
            <div
              className="e-switch-tooltip"
            >
              Режим Рубрики Пульса цен - это вид каталога состоящий из рубрик площадки Пульс цен к которым привязаны ваши товары. Если вы хотите использовать свои группы, переключитесь в режим Ваши группы.
              <div
                className={[Function]}
                onClick={[Function]}
                title="Закрыть"
              />
            </div>
          }
          overlayClassName=""
          overlayStyle={Object {}}
          placement="bottomLeft"
          prefixCls="rc-dropdown"
          showAction={Array []}
          trigger={
            Array [
              "click",
            ]
          }
          visible={false}
        >
          <Trigger
            action={
              Array [
                "click",
              ]
            }
            afterPopupVisibleChange={[Function]}
            blurDelay={0.15}
            builtinPlacements={
              Object {
                "bottomCenter": Object {
                  "offset": Array [
                    0,
                    4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "tc",
                    "bc",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "bottomLeft": Object {
                  "offset": Array [
                    0,
                    4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "tl",
                    "bl",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "bottomRight": Object {
                  "offset": Array [
                    0,
                    4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "tr",
                    "br",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "topCenter": Object {
                  "offset": Array [
                    0,
                    -4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "bc",
                    "tc",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "topLeft": Object {
                  "offset": Array [
                    0,
                    -4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "bl",
                    "tl",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "topRight": Object {
                  "offset": Array [
                    0,
                    -4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "br",
                    "tr",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
              }
            }
            closeOnSelect={false}
            defaultPopupVisible={false}
            defaultVisible={false}
            destroyPopupOnHide={false}
            focusDelay={0}
            getDocument={[Function]}
            getPopupClassNameFromAlign={[Function]}
            hideAction={Array []}
            mask={false}
            maskClosable={true}
            minOverlayWidthMatchTrigger={true}
            mouseEnterDelay={0}
            mouseLeaveDelay={0.1}
            onPopupAlign={[Function]}
            onPopupVisibleChange={[Function]}
            onVisibleChange={[Function]}
            overlay={
              <div
                className="e-switch-tooltip"
              >
                Режим Рубрики Пульса цен - это вид каталога состоящий из рубрик площадки Пульс цен к которым привязаны ваши товары. Если вы хотите использовать свои группы, переключитесь в режим Ваши группы.
                <div
                  className={[Function]}
                  onClick={[Function]}
                  title="Закрыть"
                />
              </div>
            }
            popup={
              <div
                className="e-switch-tooltip"
                onClick={[Function]}
              >
                Режим Рубрики Пульса цен - это вид каталога состоящий из рубрик площадки Пульс цен к которым привязаны ваши товары. Если вы хотите использовать свои группы, переключитесь в режим Ваши группы.
                <div
                  className={[Function]}
                  onClick={[Function]}
                  title="Закрыть"
                />
              </div>
            }
            popupAlign={Object {}}
            popupAnimation="slide-up"
            popupClassName=""
            popupPlacement="bottomLeft"
            popupStyle={Object {}}
            popupVisible={false}
            prefixCls="rc-dropdown"
            showAction={Array []}
            visible={false}
          >
            <div
              className={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            />
          </Trigger>
        </Dropdown>
      </div>
    </SwitchCategory>
  </Connect(SwitchCategory)>
</Provider>
`;

exports[`component-conatiner SwitchCategory должен показать подсказку 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(SwitchCategory)>
    <SwitchCategory
      dispatch={[Function]}
      inited={true}
      isFetching={false}
      showProductGroups={false}
      tooltipOpen={true}
    >
      <div
        className={[Function]}
      >
        <div
          className={[Function]}
        >
          <div>
            <b
              className={[Function]}
            >
              Режим:
               
              Рубрики ПЦ
            </b>
          </div>
          <div>
            <Dropdown
              animation="slide-up"
              closeOnSelect={true}
              defaultVisible={false}
              hideAction={Array []}
              minOverlayWidthMatchTrigger={true}
              onVisibleChange={[Function]}
              overlay={
                <div
                  className="e-switch-cat-menu"
                  title={undefined}
                >
                  <div
                    className={[Function]}
                  >
                    Выберите вид рубрикатора:
                  </div>
                  <SetItem
                    checked={true}
                    onSelect={[Function]}
                    title="Рубрики Пульса цен"
                  >
                    Вид каталога, состоящий из рубрик площадки Пульс цен, к которым привязаны ваши товары.
                  </SetItem>
                  <SetItem
                    checked={false}
                    onSelect={[Function]}
                    title="Ваши группы"
                  >
                    Вид каталога, в котором вы сами можете сгруппировать свои товары и услуги так, чтобы он более точно соответствовал ассортименту вашей компании.
                  </SetItem>
                </div>
              }
              overlayClassName=""
              overlayStyle={Object {}}
              placement="bottomLeft"
              prefixCls="rc-dropdown"
              showAction={Array []}
              trigger={
                Array [
                  "click",
                ]
              }
              visible={false}
            >
              <Trigger
                action={
                  Array [
                    "click",
                  ]
                }
                afterPopupVisibleChange={[Function]}
                blurDelay={0.15}
                builtinPlacements={
                  Object {
                    "bottomCenter": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tc",
                        "bc",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "bottomLeft": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tl",
                        "bl",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "bottomRight": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tr",
                        "br",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "topCenter": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bc",
                        "tc",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "topLeft": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bl",
                        "tl",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                    "topRight": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "br",
                        "tr",
                      ],
                      "targetOffset": Array [
                        0,
                        0,
                      ],
                    },
                  }
                }
                closeOnSelect={true}
                defaultPopupVisible={false}
                defaultVisible={false}
                destroyPopupOnHide={false}
                focusDelay={0}
                getDocument={[Function]}
                getPopupClassNameFromAlign={[Function]}
                hideAction={Array []}
                mask={false}
                maskClosable={true}
                minOverlayWidthMatchTrigger={true}
                mouseEnterDelay={0}
                mouseLeaveDelay={0.1}
                onPopupAlign={[Function]}
                onPopupVisibleChange={[Function]}
                onVisibleChange={[Function]}
                overlay={
                  <div
                    className="e-switch-cat-menu"
                    title={undefined}
                  >
                    <div
                      className={[Function]}
                    >
                      Выберите вид рубрикатора:
                    </div>
                    <SetItem
                      checked={true}
                      onSelect={[Function]}
                      title="Рубрики Пульса цен"
                    >
                      Вид каталога, состоящий из рубрик площадки Пульс цен, к которым привязаны ваши товары.
                    </SetItem>
                    <SetItem
                      checked={false}
                      onSelect={[Function]}
                      title="Ваши группы"
                    >
                      Вид каталога, в котором вы сами можете сгруппировать свои товары и услуги так, чтобы он более точно соответствовал ассортименту вашей компании.
                    </SetItem>
                  </div>
                }
                popup={
                  <div
                    className="e-switch-cat-menu"
                    onClick={[Function]}
                    title={undefined}
                  >
                    <div
                      className={[Function]}
                    >
                      Выберите вид рубрикатора:
                    </div>
                    <SetItem
                      checked={true}
                      onSelect={[Function]}
                      title="Рубрики Пульса цен"
                    >
                      Вид каталога, состоящий из рубрик площадки Пульс цен, к которым привязаны ваши товары.
                    </SetItem>
                    <SetItem
                      checked={false}
                      onSelect={[Function]}
                      title="Ваши группы"
                    >
                      Вид каталога, в котором вы сами можете сгруппировать свои товары и услуги так, чтобы он более точно соответствовал ассортименту вашей компании.
                    </SetItem>
                  </div>
                }
                popupAlign={Object {}}
                popupAnimation="slide-up"
                popupClassName=""
                popupPlacement="bottomLeft"
                popupStyle={Object {}}
                popupVisible={false}
                prefixCls="rc-dropdown"
                showAction={Array []}
                visible={false}
              >
                <span
                  className={[Function]}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  Сменить
                </span>
              </Trigger>
            </Dropdown>
          </div>
        </div>
        <Dropdown
          animation="slide-up"
          closeOnSelect={false}
          defaultVisible={false}
          hideAction={Array []}
          minOverlayWidthMatchTrigger={true}
          onVisibleChange={[Function]}
          overlay={
            <div
              className="e-switch-tooltip"
            >
              Режим Рубрики Пульса цен - это вид каталога состоящий из рубрик площадки Пульс цен к которым привязаны ваши товары. Если вы хотите использовать свои группы, переключитесь в режим Ваши группы.
              <div
                className={[Function]}
                onClick={[Function]}
                title="Закрыть"
              />
            </div>
          }
          overlayClassName=""
          overlayStyle={Object {}}
          placement="bottomLeft"
          prefixCls="rc-dropdown"
          showAction={Array []}
          trigger={
            Array [
              "click",
            ]
          }
          visible={true}
        >
          <Trigger
            action={
              Array [
                "click",
              ]
            }
            afterPopupVisibleChange={[Function]}
            blurDelay={0.15}
            builtinPlacements={
              Object {
                "bottomCenter": Object {
                  "offset": Array [
                    0,
                    4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "tc",
                    "bc",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "bottomLeft": Object {
                  "offset": Array [
                    0,
                    4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "tl",
                    "bl",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "bottomRight": Object {
                  "offset": Array [
                    0,
                    4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "tr",
                    "br",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "topCenter": Object {
                  "offset": Array [
                    0,
                    -4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "bc",
                    "tc",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "topLeft": Object {
                  "offset": Array [
                    0,
                    -4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "bl",
                    "tl",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
                "topRight": Object {
                  "offset": Array [
                    0,
                    -4,
                  ],
                  "overflow": Object {
                    "adjustX": 1,
                    "adjustY": 1,
                  },
                  "points": Array [
                    "br",
                    "tr",
                  ],
                  "targetOffset": Array [
                    0,
                    0,
                  ],
                },
              }
            }
            closeOnSelect={false}
            defaultPopupVisible={false}
            defaultVisible={false}
            destroyPopupOnHide={false}
            focusDelay={0}
            getDocument={[Function]}
            getPopupClassNameFromAlign={[Function]}
            hideAction={Array []}
            mask={false}
            maskClosable={true}
            minOverlayWidthMatchTrigger={true}
            mouseEnterDelay={0}
            mouseLeaveDelay={0.1}
            onPopupAlign={[Function]}
            onPopupVisibleChange={[Function]}
            onVisibleChange={[Function]}
            overlay={
              <div
                className="e-switch-tooltip"
              >
                Режим Рубрики Пульса цен - это вид каталога состоящий из рубрик площадки Пульс цен к которым привязаны ваши товары. Если вы хотите использовать свои группы, переключитесь в режим Ваши группы.
                <div
                  className={[Function]}
                  onClick={[Function]}
                  title="Закрыть"
                />
              </div>
            }
            popup={
              <div
                className="e-switch-tooltip"
                onClick={[Function]}
              >
                Режим Рубрики Пульса цен - это вид каталога состоящий из рубрик площадки Пульс цен к которым привязаны ваши товары. Если вы хотите использовать свои группы, переключитесь в режим Ваши группы.
                <div
                  className={[Function]}
                  onClick={[Function]}
                  title="Закрыть"
                />
              </div>
            }
            popupAlign={Object {}}
            popupAnimation="slide-up"
            popupClassName=""
            popupPlacement="bottomLeft"
            popupStyle={Object {}}
            popupVisible={true}
            prefixCls="rc-dropdown"
            showAction={Array []}
            visible={true}
          >
            <div
              className={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            />
          </Trigger>
        </Dropdown>
      </div>
    </SwitchCategory>
  </Connect(SwitchCategory)>
</Provider>
`;
